# RAG-Pipeline

./: LICENSE  README.md  pyproject.toml  requirements.txt
DATA/text_files/: ML.txt  RAG.txt
DATA/vector_store/: chroma.sqlite3
NOTEBOOK/: Chroma.ipynb  Faiss.ipynb  document.ipynb  embedding.ipynb  embedding_ollama.ipynb  embeddings_huggingface.ipynb  pdf_loader.ipynb
NOTEBOOK/chroma_db/: chroma.sqlite3
